--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
         "sequelize": "^4.38.0",
         "shortid": "^2.2.12",
         "sqlite3": "^4.0.2"
+    },
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "mocha": "^5.2.0",
+        "request": "^2.87.0"
+    },
+    "scripts": {
+        "test": "mocha"
     }
 }
